[project]
name = "gupb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "bresenham==0.2.1",
    "click==8.1.7",
    "dataclasses-json==0.6.1",
    "gymnasium==0.29.1",
    "matplotlib==3.8.0",
    "networkx==3.2.1",
    "numpy==1.26.0",
    "pathfinding==1.0.4",
    "perlin-noise==1.12",
    "pygame==2.5.2",
    "python-statemachine==2.1.1",
    "questionary==2.0.1",
    "scikit-guess==0.0.1a0",
    "scikit-learn==1.3.1",
    "scipy==1.11.3",
    "sortedcontainers==2.4.0",
    "stable-baselines3==2.1.0",
    "torch>=2.7.0",
    "tqdm==4.66.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.28.5",
    "icecream>=2.1.4",
    "mypy>=1.15.0",
    "ruff>=0.11.2",
]

[tool.ruff]
exclude = [".venv", "gupb"]
include = ["gupb/controller/rustler/**/*.py"]
line-length = 90

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
